# esp32-embassy-i2s

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
